; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_inet.c_mac_inpcb_label_associate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_inet.c_mac_inpcb_label_associate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.inpcb = type { i32 }

@inpcb_label_associate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_inpcb_label_associate(%struct.socket* %0, %struct.inpcb* %1) #0 {
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  store %struct.inpcb* %1, %struct.inpcb** %4, align 8
  %5 = load i32, i32* @inpcb_label_associate, align 4
  %6 = load %struct.socket*, %struct.socket** %3, align 8
  %7 = load %struct.socket*, %struct.socket** %3, align 8
  %8 = getelementptr inbounds %struct.socket, %struct.socket* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %11 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %12 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @MAC_PERFORM(i32 %5, %struct.socket* %6, i32 %9, %struct.inpcb* %10, i32 %13)
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, %struct.socket*, i32, %struct.inpcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
